# visual-inspection-reporter

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  app.py  inspect_cli.py  plan.md  pyproject.toml
assets/: sample_report.md
src/inspector/: __init__.py  batch_gemini.py  cache.py  config.py  cost.py  detector.py  domains.py  findings.py  pipeline.py  prompt.py  report.py  retry.py  schema.py
src/inspector/providers/: __init__.py  base.py  claude.py  gemini.py  openai_provider.py
tests/: conftest.py  test_cache.py  test_cost.py  test_findings.py  test_report.py  test_retry.py  test_schema.py
