[project]
name = "visual-inspection-reporter"
version = "0.1.0"
description = "PCB 產線巡檢報告產生器：本地 YOLO26 ONNX 偵測 + 商用 VLM API，輸出繁體中文巡檢報告"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "onnxruntime>=1.20",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "pillow>=10",
    "google-genai>=1.0",
    "openai>=1.60",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "gradio>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inspector"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
